[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "s1clean_plus"
version = "0.1.0"
description = "Practical data-cleaning helper with KNN imputation, strict numeric coercion, Kaggle loader, and auto visualizations."
readme = "README.md"
authors = [{name="Project S1 Student"}]
requires-python = ">=3.9"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "matplotlib>=3.5"
]

[project.optional-dependencies]
kaggle = ["kaggle>=1.6.0"]

[tool.setuptools]
packages = ["s1clean"]
package-dir = {"" = "src"}
